add psychologist vacation/schedule feature
